install problems on vercel

--- a/dragon.html
+++ b/dragon.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="node_modules/etro/dist/etro-iife.js"></script>
+    <script src="etro/dist/etro-iife.js"></script>
     <script src="js/dragon.js" defer></script>
     <title>Dragon - Sellentin</title>
 
